--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,21 @@ plugins {
 
 android {
     namespace 'com.cyclone.sharememe'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.cyclone.sharememe"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    // Data Binding
+    buildFeatures {
+        dataBinding true
     }
 
     buildTypes {
