--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    // RxJava3 with Retrofit
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
     // Paging Library
     def paging_version = "3.1.1"
     implementation "androidx.paging:paging-runtime:$paging_version"
@@ -68,7 +71,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
     def lifecycle_version = "2.5.1"
-    def arch_version = "2.1.0"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
