--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     // optional - RxJava3 support
     implementation "androidx.paging:paging-rxjava3:$paging_version"
 
+    // ReactiveX
+    implementation "io.reactivex.rxjava3:rxjava:3.0.2"
+
     // Hilt Dagger
     implementation 'com.google.dagger:hilt-android:2.44.2'
     annotationProcessor 'com.google.dagger:hilt-compiler:2.44.2'
